--- a/U1-W3-D5-Progetto_Settimanale/U1-W3-D5-Progetto_Settimanale.csproj
+++ b/U1-W3-D5-Progetto_Settimanale/U1-W3-D5-Progetto_Settimanale.csproj
@@ -103,6 +103,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Style.css" />
+    <Content Include="StyleSheet1.css" />
     <Content Include="Web.config" />
     <Content Include="Default.aspx" />
     <Content Include="Carrello.aspx" />
